fix webkit scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,10 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
-::-webkit-scrollbar {
+
+/* ::-webkit-scrollbar {
     display: none;
-}
+} */
 
 .entryTags {
     font-size: large;
